# flutter-rs

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md
.github/workflows/: ci.yml  main.yml
examples/counter/flutter_assets/: isolate_snapshot_data
examples/gallery/flutter_assets/: LICENSE
flutter-app/: README.md
flutter-app-demo/: .initignore  .tmplfiles  README.md  pubspec.yaml
flutter-app-demo/lib/: event_channel.dart  file_dialog.dart  main.dart  method_channel.dart  textfield.dart  theme.dart  window.dart
flutter-app-demo/lib/demos/: demos.dart  event_channel.dart  file_dialog.dart  method_channel.dart  textfield.dart  window.dart
flutter-app-demo/lib/ui/: drag_window.dart  menu.dart  theme.dart  widgets.dart
flutter-app-demo/rust/: .gitignore  Cargo.toml  build.rs
flutter-app-demo/rust/src/: calc_channel.rs  dialog.rs  main.rs  msg_stream_channel.rs  window.rs
flutter-app-demo/scripts/: build.py  init.py  requirements.txt  run.py
flutter-app-demo/scripts/lib/: __init__.py  build_dmg.py  build_mac.py  build_nsis.py  build_snap.py  installer.nsi
flutter-app/lib/: event_channel.dart  file_dialog.dart  main.dart  method_channel.dart  textfield.dart
flutter-app/rust/: Cargo.toml  build.rs
flutter-app/rust/scripts/: build.py  build_mac.py  run.py
flutter-app/rust/scripts/lib/: __init__.py
flutter-app/rust/src/: calc_channel.rs  main.rs  msg_stream_channel.rs  random_channel.rs
flutter-app/scripts/: build.py  requirements.txt  run.py
flutter-app/scripts/lib/: build_dmg.py  build_mac.py  build_snap.py
flutter-download/: Cargo.toml
flutter-download/src/: lib.rs  util.rs
flutter-engine/: Cargo.toml  crates-io.md
flutter-engine-codec/: Cargo.toml
flutter-engine-codec/src/: error.rs  json_codec.rs  lib.rs  macros.rs  string_codec.rs
flutter-engine-sys/: Cargo.toml  build.rs  flutter-engine.h  flutter_glfw.h
flutter-engine-sys/src/: lib.rs
flutter-engine/src/: builder.rs  channel.rs  codec.rs  desktop_window_state.rs  draw.rs  error.rs  event_loop.rs  ffi.rs  flutter_callbacks.rs  lib.rs  loader.rs  macros.rs  plugins.rs  prelude.rs  tasks.rs  texture_registry.rs  utils.rs
flutter-engine/src/channel/: basic_message_channel.rs  event_channel.rs  json_method_channel.rs  macros.rs  message_channel.rs  method_channel.rs  mod.rs  platform_message.rs  registrar.rs  registry.rs  standard_method_channel.rs
flutter-engine/src/codec/: json_codec.rs  mod.rs  standard_codec.rs  string_codec.rs  value.rs
flutter-engine/src/codec/value/: deserializer.rs  mod.rs
flutter-engine/src/plugins/: dialog.rs  keyevent.rs  lifecycle.rs  localization.rs  mod.rs  navigation.rs  platform.rs  prelude.rs  settings.rs  system.rs  textinput.rs  window.rs
flutter-engine/src/plugins/textinput/: text_editing_state.rs
flutter-glfw/: Cargo.toml
flutter-glfw/src/: draw.rs  handler.rs  lib.rs  texture_registry.rs  window.rs
flutter-plugins/: Cargo.toml
flutter-plugins/src/: dialog.rs  isolate.rs  keyevent.rs  lib.rs  lifecycle.rs  localization.rs  navigation.rs  platform.rs  prelude.rs  settings.rs  system.rs  textinput.rs  window.rs
flutter-plugins/src/textinput/: mod.rs  text_editing_state.rs  utils.rs
flutter-runner/: .gitignore  Cargo.toml  pubspec.yaml
flutter-runner/examples/counter/flutter_assets/: LICENSE  vm_snapshot_data
flutter-runner/examples/gallery/flutter_assets/: AssetManifest.json  FontManifest.json
flutter-runner/examples/stocks/flutter_assets/: LICENSE
flutter-runner/rust/: .gitignore  Cargo.toml  build.rs
flutter-runner/rust/.cargo/: config
flutter-runner/rust/assets/: icon.icns
flutter-runner/rust/scripts/: build.py  build_snap.py
flutter-runner/src/: main.rs
flutter-tools/: Cargo.toml
flutter-tools/src/: lib.rs
flutter-winit/: Cargo.toml
flutter-winit/src/: context.rs  handler.rs  keyboard.rs  lib.rs  pointer.rs  window.rs
scripts/: build.py  build_mac.py  build_mac_app.py
src/: main.rs
