[package]
name = "flutter-download"
description = "Download flutter engine for building"
version = "0.1.1"
authors = ["juju <gliheng@foxmail.com>"]
keywords = ["flutter"]
license = "MIT"
repository = "https://github.com/gliheng/flutter-rs"

[dependencies]
curl = { version = "0.4.19", features = ['http2'] }
dirs = "1.0.4"
unzip = "0.1.0"