[package]
name = "flutter-engine-sys"
version = "0.4.0"
authors = ["juju <gliheng@gmail.com>"]
edition = "2018"
description = "Rust bindings for the flutter engine."
keywords = ["flutter", "GUI"]
repository = "https://github.com/flutter-rs/flutter-rs"
license = "MIT"

[build-dependencies]
bindgen = "0.52.0"
dirs = "2.0.2"

[dev-dependencies]
libloading = "0.5.2"
