[package]
name = "flutter-engine"
version = "0.4.0"
authors = ["juju <gliheng@gmail.com>", "Sophie Tauchert <sophie@999eagle.moe>"]
edition = "2018"
description = "Flutter engine embedder in rust."
keywords = ["flutter", "GUI"]
repository = "https://github.com/flutter-rs/flutter-rs"
license = "MIT"

[dependencies]
flutter-engine-sys = { path = "../flutter-engine-sys" }
gl = { version = "0.14.0", optional = true }
image = { version = "0.22.4", optional = true, default_features = false }
log = "0.4.8"
parking_lot = "0.10.0"
priority-queue = "0.7.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"

[features]
texture-registry = ["gl", "image"]
