[package]
name = "flutter-glfw"
version = "0.4.0"
authors = ["juju <gliheng@gmail.com>", "Sophie Tauchert <sophie@999eagle.moe>"]
edition = "2018"
description = "Flutter engine embedder using glfw."
keywords = ["flutter", "GUI"]
repository = "https://github.com/gliheng/flutter-rs"
license = "MIT"

[dependencies]
async-std = "1.4.0"
flutter-engine-sys = { path = "../flutter-engine-sys" }
flutter-engine = { path = "../flutter-engine", features = ["texture-registry"] }
flutter-plugins = { path = "../flutter-plugins" }
futures-task = "0.3.1"
glfw = "0.34.0"
gl = "0.14.0"
log = "0.4.8"
lazy_static = "1.4.0"
locale_config = "0.3.0"
parking_lot = "0.10.0"
