[package]
name = "flutter-glfw"
version = "0.4.0"
authors = ["juju <gliheng@gmail.com>", "Sophie Tauchert <sophie@999eagle.moe>", "Chandler Newman <chandler2newman@hotmail.co.uk>"]
edition = "2018"
description = "Flutter engine embedder using glfw."
keywords = ["flutter", "GUI"]
repository = "https://github.com/flutter-rs/flutter-rs"
license = "MIT"

[dependencies]
copypasta = "0.6.2"
flutter-engine-sys = { path = "../flutter-engine-sys" }
flutter-engine = { path = "../flutter-engine" }
flutter-plugins = { path = "../flutter-plugins" }
gl = "0.14.0"
locale_config = "0.3.0"
log = "0.4.8"
parking_lot = "0.10.0"
glfw = "0.34.0"
lazy_static = "1.4.0"