[package]
name = "flutter-glfw"
version = "0.4.0"
authors = ["juju <gliheng@gmail.com>", "Sophie Tauchert <sophie@999eagle.moe>", "Chandler Newman <chandler2newman@hotmail.co.uk>"]
edition = "2018"
description = "Flutter engine embedder using glfw."
keywords = ["flutter", "GUI"]
repository = "https://github.com/flutter-rs/flutter-rs"
license = "MIT"

[dependencies]
flutter-engine-sys = { path = "../flutter-engine-sys" }
flutter-engine = { path = "../flutter-engine" }
flutter-plugins = { path = "../flutter-plugins" }
locale_config = "0.3.0"
log = "0.4.8"
parking_lot = "0.10.0"
glfw = "0.37.0"