[package]
name = "flutter-plugins"
description = "flutter-rs plugins"
version = "0.3.5"
authors = ["juju <gliheng@gmail.com>"]
edition = "2018"
keywords = ["flutter"]
license = "MIT"
repository = "https://github.com/gliheng/flutter-rs"

[dependencies]
flutter-engine = { version = "0.3.5", path = "../flutter-engine" }
locale_config = "0.3.0"
log = "0.4.8"
parking_lot = "0.10.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
tinyfiledialogs = "3.3.9"
unic-locale = "0.7.1"
