[package]
name = "flutter-plugins"
version = "0.4.0"
authors = ["juju <gliheng@gmail.com>"]
edition = "2018"
description = "flutter-rs plugins"
keywords = ["flutter", "GUI"]
repository = "https://github.com/flutter-rs/flutter-rs"
license = "MIT"

[dependencies]
flutter-engine = { path = "../flutter-engine" }
locale_config = "0.3.0"
log = "0.4.8"
parking_lot = "0.10.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
tinyfiledialogs = "3.3.9"
unic-locale = "0.7.1"
