[package]
name = "flutter-plugins"
version = "0.4.0"
authors = ["juju <gliheng@gmail.com>"]
edition = "2018"
description = "flutter-rs plugins"
keywords = ["flutter", "GUI"]
repository = "https://github.com/flutter-rs/flutter-rs"
license = "MIT"

[dependencies]
flutter-engine = { path = "../flutter-engine" }
locale_config = "0.3.0"
log = "0.4.11"
parking_lot = "0.11.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
tinyfiledialogs = "3.3.10"
unic-locale = "0.9.0"
