[package]
name = "flutter-winit"
version = "0.4.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Flutter engine embedder using winit."
keywords = ["flutter", "GUI"]
repository = "https://github.com/flutter-rs/flutter-rs"
license = "MIT"

[dependencies]
async-std = "1.4.0"
copypasta = "0.6.2"
flutter-engine-sys = { path = "../flutter-engine-sys" }
flutter-engine = { path = "../flutter-engine" }
flutter-plugins = { path = "../flutter-plugins" }
futures-task = "0.3.1"
gl = "0.14.0"
glutin = { git = "https://github.com/dvc94ch/glutin", branch = "android" }
locale_config = "0.3.0"
log = "0.4.8"
parking_lot = "0.10.0"
