[package]
authors = ["David Craven <david@craven.ch>"]
description = "Flutter engine embedder using winit."
edition = "2018"
keywords = ["flutter", "GUI"]
license = "MIT"
name = "flutter-winit"
repository = "https://github.com/flutter-rs/flutter-rs"
version = "0.4.0"

[dependencies]
copypasta = "0.7.1"
flutter-engine = {path = "../flutter-engine"}
flutter-engine-sys = {path = "../flutter-engine-sys"}
flutter-plugins = {path = "../flutter-plugins"}
gl = "0.14.0"
glutin = "0.26.0"
locale_config = "0.3.0"
log = "0.4.11"
parking_lot = "0.11.1"
thiserror = "1.0.22"
