[package]
name = "flutter-app-demo"
description = "Amazing desktop flutter app"
version = "0.2.0"
authors = ["juju <gliheng@gmail.com>"]
publish = false
edition = "2018"

[package.metadata.flutter]
identifier = "one.juju.flutter-app" # This is only used on mac

[dependencies]
log = "0.4.6"
env_logger = "0.6.1"
tokio = "0.1.13"
futures = "0.1.25"
tokio-timer = "0.2.8"
stream-cancel = "0.4.4"
flutter-engine = { path = "../../flutter-engine" }

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.6.3"

[build-dependencies]

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.9"
