[package]
name = "flutter-app-demo"
description = "Amazing desktop flutter app"
version = "0.2.0"
authors = ["juju <gliheng@gmail.com>"]
publish = false
edition = "2018"

[package.metadata.flutter]
identifier = "one.juju.flutter-app" # This is only used on mac

[dependencies]
log = "0.4.6"
tokio = "0.1.13"
futures = "0.1.25"
tokio-timer = "0.2.8"
stream-cancel = "0.4.4"
tinyfiledialogs = "3.3.5"
flutter-engine = { path = "../../flutter-engine" }
fern = { version = "^0.5", features = ["colored"] }
chrono = "^0.4"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.6.3"

[build-dependencies]

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.9"
