[package]
name = "flutter-app-demo"
description = "Amazing desktop flutter app"
version = "0.2.0"
authors = ["juju <gliheng@gmail.com>"]
publish = false
edition = "2018"

[package.metadata.flutter]
identifier = "one.juju.flutter-app" # This is only used on mac

[dependencies]
log = "0.4.6"
tokio = "^0.1"
futures = "^0.1"
tokio-timer = "^0.2"
stream-cancel = "^0.4"
flutter-engine = { path = "../../flutter-engine" }
flutter-plugins = { path = "../../flutter-plugins" }
fern = { version = "^0.5", features = ["colored"] }
chrono = "^0.4"
glfw = "^0.28"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.6.3"

[build-dependencies]

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.9"
