[package]
name = "flutter-runner"
description = "Desktop flutter runner"
version = "0.1.0"
authors = ["Bach <gliheng@foxmail.com>"]
publish = false
edition = "2018"

[package.metadata.flutter]
version = "5af435098d340237c5e3a69bce6aaffd4e3bfe84"

[dependencies]
log = "0.4.6"
env_logger = "0.6.0"
flutter-engine = { path = "../../flutter-engine" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6.3"

[build-dependencies]
flutter-download = { path = "../../flutter-download" }
cargo_toml = "0.4.0"
serde = "1.0.81"
serde_derive = "1.0.81"